k8s/debut_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debut
spec:
  replicas: 5
  template:
    spec:
      containers:
      - name: debut
        image: registry.gitlab.com/nicorigolo/nicojenkins
        ports:
        - containerPort: 5000
          name: monster-port
        livenessProbe:
          tcpSocket:
            port: 5000
          initialDelaySeconds: 1
          periodSeconds: 5
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5000
            httpHeaders:
            - name: Accept
              value: application/json
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          failureThreshold: 3
