k8s/debut_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: debut
  labels:
    app: debut
spec:
  selector:
    app: debut
  type: NodePort
  ports:
  - port: 5000
