k8s/debut_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debut
  labels:
    app: debut
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: monstericon.nicoprod.vagrantk3s.dopl.uk 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debut
                port:
                  number: 5000
